[metadata]
name = scc
version = 0.0.1
author = Daniel Rodríguez Mariblanca
author_email = daniel.rodriguez.mariblanca@alumnos.upm.es
description = A repository that given an organization URL, it will create a software catalog for browsing all repositories.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dakixr/scc
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    somef >= 0.7.2
    requests
    bs4
    htmlmin
    progressbar2
    mistune
    Pygments
    html2image

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    scc = scc.__main__:cli


