[metadata]
name = soca
version = attr: soca.__version__
author = Daniel Rodríguez Mariblanca
author_email = daniel.rodriguez.mariblanca@alumnos.upm.es
description = A python package that given an organization/user name, it will create a software catalog for browsing all repositories or just a single repository in a minimalist card.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oeg-upm/soca
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires =  3.9.0
install_requires =
    somef == 0.8.2
    requests
    bs4
    htmlmin
    progressbar2
    mistune
    Pygments
    html2image
    inspect4py
    click
    influxdb-client
    configparser
    DateTime
    pathlib
    nltk
    

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    soca = soca.__main__:cli


